# mcp-server-imap

./: .gitignore  =1.6.0  LICENSE  README.md  main.py  pyproject.toml  test_main.py
